# FastApiPoc

./: .cz-config  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/models/: __init__.py
tests/: test_main.py
