[project]
name = "fastapi-project"
version = "0.1.0"
description = "Mon premier projet FastAPI"
authors = [
    { name = "Valerian", email = "valerian@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = "==3.14"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "httpx==0.25.1",
    "mypy==1.6.1",
    "ruff==0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (tri des imports)
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"