[project]
name = "fastapi-project"
version = "0.1.0"
description = "Mon premier projet FastAPI"
authors = [
    { name = "Valerian", email = "valerian@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = "==3.14.3"
dependencies = [
    "fastapi==0.128.7",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "httpx==0.28.1",
    "mypy==1.19.1",
    "ruff==0.15.0",
    "commitizen==4.13.7",
    "pre-commit==4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.14.3"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (tri des imports)
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]

[tool.ruff.format]
quote-style = "double"

# Configuration Commitizen pour semantic versioning
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
major_version_zero = true
changelog_file = "CHANGELOG.md"
changelog_format = "# Changelog\n\nAll notable changes to this project will be documented in this file.\n\nThe format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),\nand this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n\n$changes"
update_changelog_on_bump = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
indent-style = "space"
